--- a/aviso.html
+++ b/aviso.html
@@ -98,7 +98,7 @@
             <div class="col-lg-10">
                 <div class="card border-0 shadow-sm">
                     <div class="card-body p-4">
-                          <section class="mb-5">
+                          <section class="mb-2">
                             <h2 class="h4 fw-bold mb-3">
                                 <i class="bi bi-info-circle-fill me-2"></i>
                                 Sobre el Servicio
@@ -117,9 +117,9 @@
                             </p>
                         </section>
 
-                        <hr class="my-5">
+                        <hr class="">
 
-                        <section class="mb-5">
+                        <section class="mb-2">
                             <h2 class="h4 fw-bold mb-3">
                                 <i class="bi bi-shield-lock-fill me-2"></i>
                                 Protección de Datos Personales
@@ -147,9 +147,9 @@
                             </ul>
                         </section>
 
-                        <hr class="my-5">
+                        <hr class="">
 
-                        <section class="mb-5">
+                        <section class="mb-2">
                             <h2 class="h4 fw-bold mb-3">
                                 <i class="bi bi-file-earmark-text-fill me-2"></i>
                                 Naturaleza del Documento
@@ -176,34 +176,9 @@
                             </ul>
                         </section>
 
-                        <hr class="my-5">
+                        <hr class="">
 
-                        <section class="mb-5">
-                            <h2 class="h4 fw-bold mb-3">
-                                <i class="bi bi-credit-card-fill me-2"></i>
-                                Política de Pagos y Reembolsos
-                            </h2>
-                            <p><strong>Costo del servicio:</strong></p>
-                            <ul>
-                                <li>El servicio tiene un costo único de <strong>S/ 1.00 (Un Sol)</strong> por cada Declaración Jurada generada.</li>
-                                <li>El pago se realiza a través de <strong>Yape</strong> (o Plin previa coordinación).</li>
-                            </ul>
-                            <p><strong>Política de no reembolso:</strong></p>
-                            <ul>
-                                <li><strong>No realizamos devoluciones de dinero</strong> una vez procesado el pago.</li>
-                                <li>Al tratarse de un servicio digital de entrega inmediata, el pago es <strong>final y no reembolsable</strong>.</li>
-                                <li>Es fundamental que revises cuidadosamente todos tus datos antes de confirmar el pago.</li>
-                            </ul>
-                            <p><strong>Correcciones:</strong></p>
-                            <ul class="mb-0">
-                                <li>En <strong>casos excepcionales</strong>, si detectas un error después del pago, podemos generar una <strong>corrección gratuita</strong> y enviarte un segundo documento sin costo adicional.</li>
-                                <li>Las correcciones están sujetas a evaluación y solo se realizan en situaciones justificadas.</li>
-                            </ul>
-                        </section>
-
-                        <hr class="my-5">
-
-                        <section class="mb-5">
+                        <section class="mb-2">
                             <h2 class="h4 fw-bold mb-3">
                                 <i class="bi bi-qr-code-scan me-2"></i>
                                 Sistema de Verificación QR
@@ -225,27 +200,27 @@
                             </ul>
                         </section>
 
-                        <hr class="my-5">
+                        <hr class="">
 
-                        <section class="mb-5">
+                        <section class="mb-2">
                             <h2 class="h4 fw-bold mb-3">
                                 <i class="bi bi-envelope-fill me-2"></i>
                                 Entrega del Documento
                             </h2>
                             <p>
-                                Una vez confirmado el pago, tu Declaración Jurada será enviada a tu <strong>correo electrónico</strong> en formato <strong>PDF tamaño A4</strong>.
+                                Tu Declaración Jurada será enviada a tu <strong>correo electrónico</strong> en formato <strong>PDF tamaño A4</strong>.
                             </p>
                             <ul>
-                                <li>Tiempo de entrega: <strong>5 minutos a 1 hora</strong> después de verificar el pago.</li>
+                                <li>Tiempo de entrega: <strong>1 a 3 minutos</strong>.</li>
                                 <li>El documento incluye diseño profesional, tus datos completos y código QR de verificación.</li>
                                 <li>Puedes descargar, imprimir o compartir el PDF cuantas veces necesites.</li>
                                 <li>Asegúrate de proporcionar un <strong>correo electrónico válido y activo</strong> para recibir tu documento.</li>
                             </ul>
                         </section>
 
-                        <hr class="my-5">
+                        <hr class="">
 
-                        <section class="mb-5">
+                        <section class="mb-2">
                             <h2 class="h4 fw-bold mb-3">
                                 <i class="bi bi-exclamation-octagon-fill me-2"></i>
                                 Limitaciones de Responsabilidad
@@ -263,9 +238,9 @@
                             </ul>
                         </section>
 
-                        <hr class="my-5">
+                        <hr class="">
 
-                        <section class="mb-5">
+                        <section class="mb-2">
                             <h2 class="h4 fw-bold mb-3">
                                 <i class="bi bi-pen-fill me-2"></i>
                                 Modificaciones al Aviso Legal
@@ -278,9 +253,9 @@
                             </p>
                         </section>
 
-                        <hr class="my-5">
+                        <hr class="">
 
-                        <section class="mb-5">
+                        <section class="mb-2">
                             <h2 class="h4 fw-bold mb-3">
                                 <i class="bi bi-telephone-fill me-2"></i>
                                 Contactos
@@ -290,7 +265,7 @@
                             </p>
                             <div class="row g-3">
                               <p>
-                                <b>Celular, Whatsapp:</b>	963299237
+                                <b>Celular, Whatsapp:</b>	963-299-237
                               </p>
                               <p>
                                 <b>Email:</b>	infoset.oficina@gmail.com
@@ -299,7 +274,7 @@
                             </div>
                         </section>
 
-                        <hr class="my-5">
+                        <hr class="">
 
                         <div class="alert alert-primary text-center" role="alert">
                             <p class="mb-2"><strong>Última actualización:</strong> Octubre 2025</p>
