--- a/ejemplo.html
+++ b/ejemplo.html
@@ -93,7 +93,13 @@
 
       <div class="container">
         
-        Ejemplo
+        <img 
+        src="assets/img/ejemplo.jpg"
+        alt="Constancia de trabajo gratis"
+        loading="lazy"
+        class="img-fluid rounded shadow mx-auto d-block"
+        style="max-width: 500px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);">
+
 
 
       </div>
