--- a/faq.html
+++ b/faq.html
@@ -105,9 +105,9 @@
                             <div class="accordion-body">
                                 <ol class="mb-0">
                                     <li class="mb-2"><strong>Completa el formulario:</strong> Ingresa tus datos personales, cargo, empresa y periodo laboral en el formulario en línea.</li>
-                                    <li class="mb-2"><strong>Verifica y abona:</strong> Revisa tus datos y realiza el pago de S/ 1 por Yape.</li>
                                     <li class="mb-2"><strong>Recibe tu documento:</strong> Obtén tu constancia en formato PDF directamente en tu correo electrónico.</li>
-                                    <li><strong>Verifica con código QR:</strong> Tu documento incluye un QR verificado por Infoset, que confirma su autenticidad.</li>
+                                    <li  class="mb-2"><strong>Verifica con código QR:</strong> Tu documento incluye un QR verificado por Infoset, que confirma su autenticidad.</li>
+                                    <li class="mb-2"><strong>Apoya el proyecto:</strong> Si te gustó el servicio, puedes dejar una donación voluntaria por Yape.</li>
                                 </ol>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                         </h2>
                         <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                Recibirás tu Declaración Jurada en <strong>formato PDF tamaño A4</strong>, con diseño profesional y código QR de verificación. El archivo se envía directamente a tu correo electrónico después de confirmar el pago, listo para descargar, imprimir o compartir con empleadores e instituciones.
+                                Recibirás tu Declaración Jurada en <strong>formato PDF tamaño A4</strong>, con diseño profesional y código QR de verificación. El archivo se envía directamente a tu correo electrónico, listo para descargar, imprimir o compartir con empleadores e instituciones.
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         </h2>
                         <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                El tiempo de entrega es de <strong>2 a 10 minutos</strong> después de verificar tu pago. Un administrador revisará tu transferencia y enviará tu constancia directamente a tu correo electrónico. Para acelerar el proceso, puedes enviar el comprobante de pago por WhatsApp.
+                                El tiempo de entrega es de <strong>1 a 3 minutos</strong>
                             </div>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                         </h2>
                         <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                Necesitas ingresar tus <strong>datos personales</strong> (nombre completo, DNI), el <strong>cargo</strong> que desempeñaste, el <strong>nombre de la empresa</strong> y el <strong>periodo laboral</strong> (fecha de inicio y fin). Es muy importante que el nombre coincida exactamente con el registrado en Yape para evitar problemas en la verificación.
+                                Necesitas ingresar tus <strong>datos personales</strong> (nombre completo, DNI), el <strong>cargo</strong> que desempeñaste, el <strong>nombre de la empresa</strong> y el <strong>periodo laboral</strong> (fecha de inicio y fin).
                             </div>
                         </div>
                     </div>
@@ -184,48 +184,6 @@
                         <div id="faq6" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
                                 Cada constancia incluye un <strong>código QR único verificado por Infoset</strong>. Cualquier empleador o institución puede escanear este código para confirmar la autenticidad del documento y verificar que los datos son correctos. Esto garantiza la validez y confiabilidad de tu declaración jurada.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item border rounded-3 mb-3 shadow-sm">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#faq7">
-                                <i class="bi bi-credit-card text-primary me-3"></i>
-                                ¿Qué métodos de pago aceptan?
-                            </button>
-                        </h2>
-                        <div id="faq7" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                            <div class="accordion-body">
-                                Actualmente aceptamos pagos por <strong>Yape</strong>. Si necesitas pagar con <strong>Plin</strong> o desde una cuenta diferente, por favor contáctanos por WhatsApp antes de realizar el pago para coordinar la verificación correctamente.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item border rounded-3 mb-3 shadow-sm">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#faq8">
-                                <i class="bi bi-pencil-square text-secondary me-3"></i>
-                                ¿Puedo corregir errores después del pago?
-                            </button>
-                        </h2>
-                        <div id="faq8" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                            <div class="accordion-body">
-                                <strong>Importante:</strong> Revisa cuidadosamente todos tus datos antes de realizar el pago. En casos excepcionales, podemos corregir errores y enviar una segunda versión <strong>sin costo adicional</strong>. Sin embargo, es tu responsabilidad verificar que toda la información esté correcta antes de confirmar el pago.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="accordion-item border rounded-3 mb-3 shadow-sm">
-                        <h2 class="accordion-header">
-                            <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#faq9">
-                                <i class="bi bi-x-circle text-danger me-3"></i>
-                                ¿Hay devoluciones o reembolsos?
-                            </button>
-                        </h2>
-                        <div id="faq9" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-                            <div class="accordion-body">
-                                <strong>No realizamos devoluciones de dinero</strong> una vez procesado el pago, ya que el servicio se entrega de forma inmediata y digital. Por eso es crucial que revises todos tus datos antes de pagar.
                             </div>
                         </div>
                     </div>
@@ -253,7 +211,7 @@
                         </h2>
                         <div id="faq11" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                Puedes contactarnos por <strong>WhatsApp</strong> en cualquier momento. Estamos disponibles para resolver tus dudas, coordinar pagos desde otras cuentas, o ayudarte a acelerar tu solicitud enviando el comprobante de pago. ¡No dudes en escribirnos!
+                                Puedes contactarnos por <strong>WhatsApp</strong> en cualquier momento o por Email. ¡No dudes en escribirnos!
                             </div>
                         </div>
                     </div>
