--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Constancia de Trabajo - Declaración Jurada Verificada por Infoset</title>
+  <title>Constancia de Trabajo Gratis Crear</title>
   <meta name="description" content="Genera tu Declaración Jurada de Constancia de Trabajo en minutos. Documento verificado con código QR por Infoset. Servicio rápido, seguro y accesible para todos.">
   <meta name="keywords" content="constancia de trabajo, declaración jurada, certificado laboral, constancia laboral, infoset, empleo Perú, documento laboral, constancia con QR, crear constancia, constancia online, verificación QR">
 
@@ -109,17 +109,7 @@
       </div>
     </div>
 
-    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
-      <div class="card">
-        <div class="card-body text-center">
-          <div class="icon-wrapper">
-            <i class="bi bi-check-circle fs-2 text-primary"></i>
-          </div>
-          <h3 class="card-title">2. Verifica y abona</h3>
-          <p class="card-text">Revisa tus datos y realiza un pago simbólico para generar tu constancia.</p>
-        </div>
-      </div>
-    </div>
+    
 
     <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
       <div class="card">
@@ -127,7 +117,7 @@
           <div class="icon-wrapper">
             <i class="bi bi-file-earmark-pdf fs-2 text-primary"></i>
           </div>
-          <h3 class="card-title">3. Recibe tu documento</h3>
+          <h3 class="card-title">2. Recibe tu documento</h3>
           <p class="card-text">Obtén tu constancia en formato PDF, lista para compartir o imprimir.</p>
         </div>
       </div>
@@ -139,11 +129,25 @@
           <div class="icon-wrapper">
             <i class="bi bi-qr-code fs-2 text-primary"></i>
           </div>
-          <h3 class="card-title">4. Verifica con código QR</h3>
+          <h3 class="card-title">3. Verifica con código QR</h3>
           <p class="card-text">Tu documento incluye un QR verificado por Infoset, que confirma su autenticidad.</p>
         </div>
       </div>
     </div>
+
+    <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12">
+      <div class="card">
+        <div class="card-body text-center">
+          <div class="icon-wrapper">
+            <i class="bi bi-check-circle fs-2 text-primary"></i>
+          </div>
+          <h3 class="card-title">4. Apoya el proyecto</h3>
+          <p class="card-text">Si te gustó el servicio, puedes dejar una donación voluntaria por Yape.</p>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 </div>
 
